unpackaged/main/default/objects/FSL_User_Message__c/FSL_User_Message__c.object-meta.xml
<CustomObject>
    <label>User Message</label>
    <nameField>
        <displayFormat>UM-{000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>