unpackaged/main/default/objects/FSL_User_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <description>Message verbiage displayed to the user</description>
    <label>Message Text</label>
    <type>TextArea</type>
</CustomField>