unpackaged/main/default/objects/FSL_User_Message__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassignment</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>En Route</fullName>
            </value>
            <value>
                <fullName>On Location</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>In Tow</fullName>
            </value>
            <value>
                <fullName>Tow Complete</fullName>
            </value>
            <value>
                <fullName>Override Resource Preference</fullName>
            </value>
            <value>
                <fullName>Tow Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>