unpackaged/main/default/objects/FSL_User_Message__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <length>100</length>
    <type>Text</type>
</CustomField>