unpackaged/main/default/objects/FSL_User_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message_Id__c</columns>
    <columns>Message_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>